2007-05-07  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (eval-line): print all values
	(columnize): new function
	(display-keybinding): print prefix keys. print bindings in columns
	("reload"): properly notify when asdf isn't loaded

	* primitives.lisp (*suppress-abort-messages*): new global
	(concat): new defun

	* kmap.lisp (search-kmap): match command before checking if its a kmap

	* user.lisp ("windowlist"): properly tell the user when there are
	no managed windows.
	(argument-pop-or-read): throw :abort
	(argument-pop-rest-or-read): likewise
	(:frame): likewise
	("colon"): likewise
	("windowlist"): likewise
	(parse-and-run-command): likewise
	(interactive-command): echo "Abort." for aborted commands unless *suppress-echo-timeout* is on.
	(display-keybinding): use message-no-timeout

	* input.lisp (*input-map*): bind ESC to input-abort

2007-05-06  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp ("gnew"): check if group exists
	("gnewbg"): likewise

	* input.lisp (input-find-completions): make sure the symbol is fboundp

	* core.lisp (find-group): new function

2007-05-05  Shawn Betts  <sabetts@shitbender.gagrod>

	* primitives.lisp (*focus-color*): set to gray

	* user.lisp ("loadrc"): wrap in with-restarts-menu
	("lastmsg"): handle case when there is no last message.
	("gmerge"): new command
	(*root-map*): switch around window navigating bindings to be the same as ratpoison

	* stumpwm.lisp (load-rc-file): take new argument, catch-errors.
	(stumpwm): print *startup-message* when non-nil on start up.

	* primitives.lisp (*window-format*): crop title at 50 chars
	(*startup-message*): new defvar

2007-05-04  Shawn Betts  <sabetts@shitbender.gagrod>

	* primitives.lisp (format-expand): allow a numeric "prefix" that
	crops the argument's string length.

2007-05-04  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (add-window): call screen-add-mapped-window
	(restore-window): likewise
	(withdraw-window): call screen-remove-mapped-window