@@ -1,3 +1,10 @@
+2007-05-09  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* core.lisp (:configure-request): more verbose debug output
+	(grab-keyboard): likwise
+	(ungrab-keyboard): likwise
+	(:focus-out): new event handler
+
 2007-05-07  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* user.lisp (eval-line): print all values
